# loop-fusion-test

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
.github/workflows/: cmake.yml
src/: main.cpp
